[metadata]
name = vsw_repo
version = 0.0.1
license_file = LICENSE
author = Futurewei Technologies
author_email = gang4.chen@symbio.com
description = Command line tool for interacting with the verifiable software repository
url = https://github.com/verifiablesoftware/vsw-repo.git
home-page = https://github.com/verifiablesoftware/vsw-repo#readme

[options]
packages =
    vsw_repo
    vsw_repo.conf
    vsw_repo.commands
python_requires = >=3.6
setup_requires =
    setuptools_scm >= 1.15
include_package_data=True
[options.entry_points]
vsw_repo.registered_commands =
    start = vsw_repo.commands.start:main
    restart = vsw_repo.commands.restart:main
    end = vsw_repo.commands.end:main
    log = vsw_repo.commands.log:main
    list = vsw_repo.commands.list:main
console_scripts =
    vsw-repo = vsw_repo.__main__:main